# git-pal

./: .gitignore  EULA.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
marketing/: gumroad_auto_message.txt  seller_cheatsheet.md
src/git_pal/: cli.py  config.py  git.py  licensing.py
src/git_pal/merge/: ast_merger.py  conflict_analyzer.py
src/git_pal/rebase/: parser.py  state.py
src/git_pal/tui/: app.py
src/git_pal/tui/screens/: modals.py  rebase.py
tests/: conftest.py
tests/integration/: test_tui_interactions.py
tests/unit/: test_config.py  test_licensing.py  test_rebase_parser.py
tools/: gp_issue_license.py  gp_keygen.py  gp_pack_buyer.py  release_sanity.py
